// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should render 1`] = `
<div>
  <div
    class="checkbox"
    data-testid="checkbox"
  >
    <label />
    <input
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox should render with checked 1`] = `
<div>
  <div
    class="checkbox__checked"
    data-testid="checkbox"
  >
    <label />
    <input
      checked=""
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="DoneIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
  </div>
</div>
`;

exports[`Checkbox should render with label 1`] = `
<div>
  <div
    class="checkbox"
    data-testid="checkbox"
  >
    <label>
      Label Includes Random Characters
    </label>
    <input
      type="checkbox"
    />
  </div>
</div>
`;

exports[`Checkbox should render with label, checked and onChecked 1`] = `
<div>
  <div
    class="checkbox__checked"
    data-testid="checkbox"
  >
    <label>
      Label Includes Random Characters
    </label>
    <input
      checked=""
      type="checkbox"
    />
    <svg
      aria-hidden="true"
      class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
      data-testid="DoneIcon"
      focusable="false"
      viewBox="0 0 24 24"
    >
      <path
        d="M9 16.2 4.8 12l-1.4 1.4L9 19 21 7l-1.4-1.4L9 16.2z"
      />
    </svg>
  </div>
</div>
`;

exports[`Checkbox should render with onChecked 1`] = `
<div>
  <div
    class="checkbox"
    data-testid="checkbox"
  >
    <label />
    <input
      type="checkbox"
    />
  </div>
</div>
`;
